[package]
name = "scpmapper"
version = "1.0.1"
authors = ["grufkork <griffin.hiscoke@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inputbot = "0.5.0"

[target.'cfg(windows)'.dependencies]
winapi-util = "0.1.5"